--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -1,9 +1,9 @@
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/hib
+    url: jdbc:mysql://mysql-db:3306/powerMart
     driver-class-name: com.mysql.jdbc.Driver
     username: root
-    password: Fayaz78677@
+    password: root
   jpa:
     hibernate:
       ddl-auto: create
