changed db connections

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -1,7 +1,8 @@
 spring:
   datasource:
     # Using file-based H2 database for persistence
-    url: jdbc:h2:file:./data/testdb;DB_CLOSE_ON_EXIT=FALSE;DB_CLOSE_DELAY=-1
+    #url: jdbc:h2:file:./data/testdb;DB_CLOSE_ON_EXIT=FALSE;DB_CLOSE_DELAY=-1
+    url: jdbc:h2:mem:testdb
     driver-class-name: org.h2.Driver
     username: root
     password: root
