--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -1,7 +1,7 @@
 spring:
   datasource:
-    url: jdbc:mysql://mysql-db:3306/powerMart
-    driver-class-name: com.mysql.jdbc.Driver
+    url: jdbc:mysql://mysqldb:3306/powerMart
+    driver-class-name: com.mysql.cj.jdbc.Driver
     username: root
     password: root
   jpa:
